# llm_engineering

./: pyproject.toml
week1/: day1.ipynb
