[project]
name = "llms_eng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
    "python-hue-v2>=2.2.1",
    "requests>=2.32.3",
    "semantic-kernel>=1.25.0",
    "sendgrid>=6.11.0",
    "setuptools>=78.1.0",
    "pandas>=2.3.1",               
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "statsmodels==0.14.5",

]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
